@@ -3,6 +3,7 @@
 #include <vector>
 #include <imgui.h>
 #include "mvCore.h"
+#include <unordered_map>
 
 
 namespace Marvel {
@@ -50,6 +51,37 @@ namespace Marvel {
             mvColor color;
         };
 
+        struct StyleVar
+        {
+            ImGuiStyleVar idx;
+            std::vector<float> value;
+        };
+
+        std::unordered_map<ImGuiStyleVar, int> style_var_sizes {
+        { ImGuiStyleVar_Alpha,               1 },
+        { ImGuiStyleVar_WindowPadding,       2 },
+        { ImGuiStyleVar_WindowRounding,      1 },
+        { ImGuiStyleVar_WindowBorderSize,    1 },
+        { ImGuiStyleVar_WindowMinSize,       2 },
+        { ImGuiStyleVar_WindowTitleAlign,    2 },
+        { ImGuiStyleVar_ChildRounding,       1 },
+        { ImGuiStyleVar_ChildBorderSize,     1 },
+        { ImGuiStyleVar_PopupRounding,       1 },
+        { ImGuiStyleVar_PopupBorderSize,     1 },
+        { ImGuiStyleVar_FramePadding,        2 },
+        { ImGuiStyleVar_FrameRounding,       1 },
+        { ImGuiStyleVar_FrameBorderSize,     1 },
+        { ImGuiStyleVar_ItemSpacing,         2 },
+        { ImGuiStyleVar_ItemInnerSpacing,    2 },
+        { ImGuiStyleVar_IndentSpacing,       1 },
+        { ImGuiStyleVar_ScrollbarSize,       1 },
+        { ImGuiStyleVar_ScrollbarRounding,   1 },
+        { ImGuiStyleVar_GrabMinSize,         1 },
+        { ImGuiStyleVar_GrabRounding,        1 },
+        { ImGuiStyleVar_TabRounding,         1 },
+        { ImGuiStyleVar_ButtonTextAlign,     2 },
+        { ImGuiStyleVar_SelectableTextAlign, 2 } };
+
     public:
 
         mvAppItemStyleManagerScope getScopedStyleManager();
@@ -60,10 +92,17 @@ namespace Marvel {
         void clearColors          ();
         void clearTempColors      ();
 
+        void addStyleVar(ImGuiStyleVar item, std::vector<float> value);
+        void pushStyleVars();
+        void popStyleVars();
+        void clearStyleVars();
+
     private:
 
         std::vector<StyleColor> m_colors;
         std::vector<StyleColor> m_colors_temp;
+
+        std::vector<StyleVar> m_style_vars;
 
     };
 }
